# temperature-controller-ai-voice-muggle-fairy

./: .cproject  .gitignore  .gitmodules  .mxproject  .project  AGENTS.md  GEMINI.md  ai_tempconroler.ioc  cubemx_generate_keil.script  pin mapping.md
.github/agents/: keil-project-expert.agent.md
Core/Inc/: main.h
Core/Src/: freertos.c  fsmc.c  gpio.c  main.c  stm32f4xx_it.c
Drivers/BSP/Adafruit_Shield/: lcd_io_fsmc.c  stm32_adafruit_lcd.c  stm32_adafruit_lcd.h
Drivers/BSP/Components/ili9341/: fsmc_8080.c  fsmc_8080.h  ili9341.c  ili9341.h  ili9341_official.c
Drivers/BSP/Components/xpt2046/: xpt2046.c  xpt2046.h
FATFS/App/: fatfs.c
MDK-ARM/: CMakeLists.txt  GEMINI.md  ai_tempconroler.cproject.yml  ai_tempconroler.csolution.yml  ai_tempconroler.uvguix.xuqianjx  ai_tempconroler.uvoptx  ai_tempconroler.uvprojx  ai_tempconroler_bsp_test.uvprojx
MDK-ARM/.embedder/: bootstrap-context-prod.enc
MDK-ARM/.embedder/svd-cache/: STM32F407.json  index.json
MDK-ARM/RTE/_ai_tempconroler/: RTE_Components.h
MDK-ARM/ai_tempconroler/: ai_tempconroler.axf  ai_tempconroler.build_log.htm  ai_tempconroler.hex  ai_tempconroler.htm  ai_tempconroler.lnp  ai_tempconroler.map  ai_tempconroler_ai_tempconroler.dep  bsp_driver_sram.d  bsp_stubs.d  cmsis_os.d  croutine.d  diskio.d  display_drv.d  event_groups.d  fatfs.d  ff.d  ff_gen_drv.d  freertos.d  fsmc.d  gifdec.d  gpio.d  heap_4.d  ili9341.d  jaricom.d  jcapimin.d  jcapistd.d  jcarith.d  jccoefct.d  jccolor.d  jcdctmgr.d  jchuff.d  jcinit.d  jcmainct.d  jcmarker.d  jcmaster.d  jcomapi.d  jcparam.d  jcprepct.d  jcsample.d  jctrans.d  (+264 more)
MDK-ARM/cmake/stm32cubemx/: CMakeLists.txt
MDK-ARM_clean/ai_tempconroler/: .mxproject  ai_tempconroler.ioc
MDK-ARM_clean/ai_tempconroler/Core/Src/: fsmc.c  gpio.c  main.c
MDK-ARM_clean/ai_tempconroler/FATFS/App/: fatfs.h
MDK-ARM_clean/ai_tempconroler/LIBJPEG/App/: libjpeg.c  libjpeg.h
MDK-ARM_clean/ai_tempconroler/MDK-ARM/: ai_tempconroler.uvoptx  ai_tempconroler.uvprojx
MDK-ARM_clean/ai_tempconroler/MXTmpFiles/: fatfs_HalInit.tmp  fatfs_ext_vars.tmp  fatfs_inc.tmp  fatfs_vars.tmp
Tests/BSP/: SOP_BSP_LCD_SELF_TEST.md  main_bsp_test.c
UI/: README.md
UI/Core/Inc/: bsp_stubs.h  display_drv.h  lvgl.h  tianji_data.h  tianji_dial.h  tianji_particles.h  tianji_ui.h  tianji_voice.h  touch_drv.h
UI/Core/Src/: main.c  tianji_data.c  tianji_dial.c  tianji_particles.c  tianji_ui.c  tianji_voice.c  touch_drv.c
UI/LVGL/: lv_conf.h
